updated leader board ui and survey collect scripts - umesh

--- a/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/assets/css/custome.css
+++ b/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/assets/css/custome.css
@@ -180,11 +180,11 @@ a:hover {
     text-align: left;
 }
 
-.table td+td+td {
+/* .table td+td+td {
     text-align: center;
     margin-left: 10px;
     padding-left: 201px;
-}
+} */
 
 th {
     font-family: Monument Grotesk;
